@@ -2075,6 +2075,7 @@ void SPVM_JITCODE_BUILDER_build_jitcode() {
               SPVM_STRING_BUFFER_add_int(string_buffer,  opcode->operand0);
               SPVM_STRING_BUFFER_add(string_buffer, ";\n");
               SPVM_STRING_BUFFER_add(string_buffer, "  }\n");
+              
               break;
             }
             case SPVM_OPCODE_C_CODE_IF_CROAK_RETURN: {
