@@ -1,5 +1,6 @@
 0.0308 2018-02-02
   - implement Perl compatible GC system correctory
+  - fix eval block stack bug
 0.0307 2018-02-01
   - fix print function bug that print line break.
   - remove say relative functions. say, say_xxx, say_xxx_err
